	da matriz Hessiana das restrições.

	* @problema/private/extrair_Dx.m: Função adicionada.
	
	* @problema/private/extrair_Dy.m: Função adicionada.
	
	* @problema/private/extrair_Dz.m: Função adicionada.
	
	* @problema/private/obter_Dx.m: Função removida.

	* @problema/private/obter_Dy.m: Função removida.

	* @problema/private/obter_Dz.m: Função removida.

2010-12-28  Leonardo Martins  <leonardo@cose.fee.unicamp.br>

	* @problema/private/desempacotar_lambdaa.m: Função adicionada.

	* @problema/private/desempacotar_lambdab.m: Função adicionada.

	* @problema/private/desempacotar_lambdac.m: Função adicionada.
	
	* @problema/private/extrair_lambdaa.m: Função adicionada.
	
	* @problema/private/extrair_lambdab.m: Função adicionada.
	
	* @problema/private/extrair_lambdac.m: Função adicionada.

	* @problema/private/obter_mlambda_a.m: Função removida.

	* @problema/private/obter_mlambda_b.m: Função removida.

	* @problema/private/obter_mlambda_c.m: Função removida.
	
	* @problema/private/obter_vlambda_a.m: Função removida.
	
	* @problema/private/obter_vlambda_b.m: Função removida.
	
	* @problema/private/obter_vlambda_c.m: Função removida.
	
	* @uhe/dpdv.m: Ordem dos argumentos de vazão alterada.

2010-12-27  Leonardo Martins  <leonardo@cose.fee.unicamp.br>

	* @uhe/Hp.m: Função removida.
	
	* @uhe/dpdss.m: Função adicionada.
	
	* @uhe/dpdsq.m: Função adicionada.
	
	* @uhe/dpdqq.m: Função adicionada.
	
	* @uhe/dpdqv.m: Função adicionada.
	
	* @uhe/dpdvv.m: Função adicionada.
	
2010-12-22  Leonardo Martins  <leonardo@cose.fee.unicamp.br>

	* @problema/private/calcular_JPj.m: Função removida.

	* @problema/private/calcular_JP.m: Modificação do algoritmo de construção
	da matriz Jacobiana de P(.) com uso de vetores de índices de elementos
	não-nulos.
	
	* @uhe/dpds.m: Função adicionada.
	
	* @uhe/dpdq.m: Função adicionada.
	
	* @uhe/dpdv.m: Função adicionada.
	
2010-12-21  Leonardo Martins  <leonardo@cose.fee.unicamp.br>

	* @problema/private/calcular_JQj.m: Função removida.
